[package]
name = "hload"
version = "1.0.0"
edition = "2021"
license = "MIT"
include = ["src/main.rs", "LICENSE", "README.md"]

[profile.release]
opt-level = 3
lto = "thin"
debug = 0
strip = "symbols"

[dependencies]
clap = { version = "4", features = ["derive"] }
flume = "0.11"
futures-buffered = "0.2"
humantime = "2"
parking_lot = "0.12"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "charset", "http2", "macos-system-configuration"] }
spdlog-rs = { version = "0.3", features = ["multi-thread"] }
tokio = { version = "1.40", features = ["macros", "rt-multi-thread"] }
quantiles = "0.7"
