[package]
name = "hload"
description = "Simple HTTP load testing tool that mimics portions of cURL's CLI.."
version = "1.0.3"
edition = "2021"
license = "MIT"
homepage = "https://github.com/Vonr/hload"
repository = "https://github.com/Vonr/hload"
keywords = ["http", "cli"]
include = ["src/main.rs", "LICENSE", "README.md"]

[profile.release]
opt-level = 3
lto = "thin"
debug = 0
strip = "symbols"

[dependencies]
clap = { version = "4", features = ["derive"] }
futures-buffered = "0.2"
humantime = "2"
parking_lot = "0.12"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "http2", "macos-system-configuration", "hickory-dns", "stream"] }
spdlog-rs = { version = "0.3", features = ["multi-thread"] }
tokio = { version = "1", features = ["rt-multi-thread"] }
quantiles = "0.7"
futures-util = "0.3"
async-scoped = { version = "0.9", features = ["tokio", "use-tokio"] }

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/{ version }/{ name }-{ version }-{ target }{ archive-suffix }"
bin-dir = "{ name }-{ version }-{ target }/{ bin }{ binary-ext }"
pkg-fmt = "tgz"
disabled-strategies = ["quick-install", "compile"]

[package.metadata.binstall.overrides.x86_64-pc-windows-msvc]
pkg-fmt = "zip"

[package.metadata.binstall.overrides.x86_64-pc-windows-gnu]
pkg-fmt = "zip"
